Initial commit for campaign table sorting/filtering. The whole table will be refactored to have static info only.

--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -254,7 +254,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
       <div class="one field">
         <div class="field">
             <label>Setup {{ show_hint('#Setup', 'Setup commands') }}</label>
-            <input type="text" id="ae_launch_setup" disabled>
+            <textarea rows="3" id="ae_launch_setup" disabled></textarea>
         </div>
       </div>
 
@@ -285,11 +285,11 @@ Campaign Stages {{ show_hint('', 'Help page') }}
       <div class="two fields">
         <div class="field">
           <label>Launch Script {{ show_hint('#Launch-Script', 'Script name with arguments') }}</label>
-          <input type="text" id="ae_launch_script" disabled>
+          <textarea rows="3" id="ae_launch_script" disabled></textarea>
         </div>
         <div class="field">
           <label>Definition Parameters {{ show_hint('#Definition-Parameters', 'Parameter set') }}</label>
-          <input type="text" id="ae_launch_definition_parameters" disabled>
+          <textarea rows="3" id="ae_launch_definition_parameters" disabled></textarea>
         </div>
       </div>
 
