--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -37,6 +37,14 @@
 
     <script src="{{pomspath}}/static/js/jquery.doublescroll.js"></script> <!-- VP -->
 
+    <script type="text/javascript" src="{{pomspath}}/static/js/jquery.tablesorter.js"></script>
+    <script type="text/javascript" src="{{pomspath}}/static/js/jquery.tablesorter.widgets.js"></script>
+<!--    <script type="text/javascript" src="https://mottie.github.io/tablesorter/dist/js/jquery.tablesorter.min.js"></script>   -->
+    <!-- tablesorter widgets (optional) -->
+<!--    <script type="text/javascript" src="https://mottie.github.io/tablesorter/dist/js/jquery.tablesorter.widgets.js"></script> -->
+    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.ice.css">
+    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.dropbox.css">
+
     <style type="text/css">
       div.scrollable {
         width: 100%;
