--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -62,11 +62,13 @@
         Tagged Campaigns
       </a>
       <a class="item" href="{{pomspath}}/show_campaigns">
-        Active Campaign Stages
+        Campaign Stages
       </a>
+<!--
       <a class="item" href="{{pomspath}}/show_campaigns?active=False">
         InActive Campaign Stages
       </a>
+-->
     </div>
   </div>
 
