--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -41,6 +41,10 @@ Campaign Stages{%include 'help_button.html'%}
 
 <div class="ui {{ 'disabled' if (not current_experimenter.is_root()) }} teal button" onclick="pop_mark_inactive_modal()">Mark Campaign Active/Inactive</div>
 
+{% if campaigns|length == 0 %}
+<br>
+[No Campaigns Available]
+{% else %}
 <div id="double-scroll" class="ui _scrollable">
     <!-- campaigns.0.experiment_obj.restricted: {{campaigns.0.experiment_obj.restricted}} -->
     <!-- current_experimenter.is_authorized(campaigns.0.experiment): {{current_experimenter.is_authorized(campaigns.0.experiment)}} -->
@@ -80,6 +84,7 @@ Campaign Stages{%include 'help_button.html'%}
         //$('.hideit').hide();
     </script>
 </div>
+{% endif %}
 
 <div class="ui modal small" id="mark_inactive_modal" style="padding: 0px 20px;">
   <i class="close icon"></i>
