--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -28,13 +28,11 @@
   <div data-ecl class="item">
     <div class="header">Logbook</div>
     <div class="menu">
-      {% if session_experiment == 'dune' %}
-        <a class="item" href="http://dbweb0.fnal.gov/ECL/{{session_experiment ~ 'pro'}}/E/index">
-      {% else %}
-        <a class="item" href="http://dbweb0.fnal.gov/ECL/{{session_experiment}}/E/index">
-      {% endif %}
-        {{session_experiment|capitalize}}
-      </a>
+        <a class="item" href="{{exp_obj.logbook}}">{{session_experiment|capitalize}}</a>
+    </div>
+    <div class="header">Service Now</div>
+    <div class="menu">
+        <a class="item" href="{{exp_obj.snow_url}}">POMS Service Page</a>
     </div>
   </div>
 
