remove editorial comment, now that query is fixed.

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -227,12 +227,12 @@ $( document ).ready(function() {
               </div>
 	      <div class=item>
 	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_in_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram (slow)
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Copy In Time Histogram
 	       </a>
               </div>
 	      <div class=item>
 	       <a href="{{pomspath}}/jobs_time_histo?timetype=copy_out_time&campaign_id={{Campaign.campaign_id}}&tmax={{tmaxs}}">
-		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Copy Out Time Histogram (slow)
+		   <i class="external bar chart icon" data-content="Campaign Jobs Efficiency" data-variation="basic"></i>Job Copy Out Time Histogram
 	       </a>
               </div>
 	      <div class=item>
